fixed bug of double scroll bars appearing

--- a/sites/all/themes/scholar_admin/scholar-admin.css
+++ b/sites/all/themes/scholar_admin/scholar-admin.css
@@ -77,7 +77,7 @@ body#tinymce {
 .innerframe {
   position: absolute;
   width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
   }
 	
 #cp-content .innerframe .pad {
